Fixed EditBackground scrollbars not accounting for footer.
Fixed the EditBackground window, where both the background panel and the tag panel were not accounting for the footer, thus the bottom of the scrollbar would appear below the footer.
This also for the tag panel meant that it would be impossible to click the last row of tags as it appeared behind the footer.

Also fixed some classes within the edit-background-panel.

--- a/src/ui/styles/EditBackground.css
+++ b/src/ui/styles/EditBackground.css
@@ -145,6 +145,8 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+  height: calc(100vh - 60px - 35px);
+  max-height: calc(100vh - 60px - 35px);
 }
 
 .edit-background-panel {
@@ -189,7 +191,6 @@
   font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  flex: 1;
   box-sizing: border-box;
   color: #fff;
 }
